--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 pathlib2==2.3.5
+psycopg2-binary==2.8.6
 scandir==1.10.0
 six==1.15.0
 SQLAlchemy==1.4.5
