--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==2.11.3
 Mako==1.1.4
 MarkupSafe==1.1.1
 pathlib2==2.3.5
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 python-editor==1.0.4
